version_op_rand/_build/parser.output
   0  $accept : %entry% $end

   1  main : commentaire_liste suite
   2       | suite

   3  suite : P C N F INT INT EOL liste

   4  liste : EOF
   5        | clause liste
   6        | commentaire liste

   7  commentaire_liste : commentaire commentaire_liste
   8                    | commentaire

   9  commentaire : C texte

  10  texte : C texte
  11        | P texte
  12        | N texte
  13        | F texte
  14        | MOINS texte
  15        | ZERO texte
  16        | INT texte
  17        | TRUC texte
  18        | EOL

  19  clause : ZERO EOL
  20         | MOINS INT clause
  21         | INT clause
  22         | EOL

  23  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (23)

	P  shift 3
	C  shift 4
	.  error

	main  goto 5
	commentaire_liste  goto 6
	suite  goto 7
	commentaire  goto 8


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	suite : P . C N F INT INT EOL liste  (3)

	C  shift 9
	.  error


state 4
	commentaire : C . texte  (9)

	INT  shift 10
	P  shift 11
	C  shift 12
	N  shift 13
	F  shift 14
	MOINS  shift 15
	ZERO  shift 16
	EOL  shift 17
	TRUC  shift 18
	.  error

	texte  goto 19


state 5
	%entry% : '\001' main .  (23)

	.  reduce 23


state 6
	main : commentaire_liste . suite  (1)

	P  shift 3
	.  error

	suite  goto 20


state 7
	main : suite .  (2)

	.  reduce 2


state 8
	commentaire_liste : commentaire . commentaire_liste  (7)
	commentaire_liste : commentaire .  (8)

	C  shift 4
	P  reduce 8

	commentaire_liste  goto 21
	commentaire  goto 8


state 9
	suite : P C . N F INT INT EOL liste  (3)

	N  shift 22
	.  error


state 10
	texte : INT . texte  (16)

	INT  shift 10
	P  shift 11
	C  shift 12
	N  shift 13
	F  shift 14
	MOINS  shift 15
	ZERO  shift 16
	EOL  shift 17
	TRUC  shift 18
	.  error

	texte  goto 23


state 11
	texte : P . texte  (11)

	INT  shift 10
	P  shift 11
	C  shift 12
	N  shift 13
	F  shift 14
	MOINS  shift 15
	ZERO  shift 16
	EOL  shift 17
	TRUC  shift 18
	.  error

	texte  goto 24


state 12
	texte : C . texte  (10)

	INT  shift 10
	P  shift 11
	C  shift 12
	N  shift 13
	F  shift 14
	MOINS  shift 15
	ZERO  shift 16
	EOL  shift 17
	TRUC  shift 18
	.  error

	texte  goto 25


state 13
	texte : N . texte  (12)

	INT  shift 10
	P  shift 11
	C  shift 12
	N  shift 13
	F  shift 14
	MOINS  shift 15
	ZERO  shift 16
	EOL  shift 17
	TRUC  shift 18
	.  error

	texte  goto 26


state 14
	texte : F . texte  (13)

	INT  shift 10
	P  shift 11
	C  shift 12
	N  shift 13
	F  shift 14
	MOINS  shift 15
	ZERO  shift 16
	EOL  shift 17
	TRUC  shift 18
	.  error

	texte  goto 27


state 15
	texte : MOINS . texte  (14)

	INT  shift 10
	P  shift 11
	C  shift 12
	N  shift 13
	F  shift 14
	MOINS  shift 15
	ZERO  shift 16
	EOL  shift 17
	TRUC  shift 18
	.  error

	texte  goto 28


state 16
	texte : ZERO . texte  (15)

	INT  shift 10
	P  shift 11
	C  shift 12
	N  shift 13
	F  shift 14
	MOINS  shift 15
	ZERO  shift 16
	EOL  shift 17
	TRUC  shift 18
	.  error

	texte  goto 29


state 17
	texte : EOL .  (18)

	.  reduce 18


state 18
	texte : TRUC . texte  (17)

	INT  shift 10
	P  shift 11
	C  shift 12
	N  shift 13
	F  shift 14
	MOINS  shift 15
	ZERO  shift 16
	EOL  shift 17
	TRUC  shift 18
	.  error

	texte  goto 30


state 19
	commentaire : C texte .  (9)

	.  reduce 9


state 20
	main : commentaire_liste suite .  (1)

	.  reduce 1


state 21
	commentaire_liste : commentaire commentaire_liste .  (7)

	.  reduce 7


state 22
	suite : P C N . F INT INT EOL liste  (3)

	F  shift 31
	.  error


state 23
	texte : INT texte .  (16)

	.  reduce 16


state 24
	texte : P texte .  (11)

	.  reduce 11


state 25
	texte : C texte .  (10)

	.  reduce 10


state 26
	texte : N texte .  (12)

	.  reduce 12


state 27
	texte : F texte .  (13)

	.  reduce 13


state 28
	texte : MOINS texte .  (14)

	.  reduce 14


state 29
	texte : ZERO texte .  (15)

	.  reduce 15


state 30
	texte : TRUC texte .  (17)

	.  reduce 17


state 31
	suite : P C N F . INT INT EOL liste  (3)

	INT  shift 32
	.  error


state 32
	suite : P C N F INT . INT EOL liste  (3)

	INT  shift 33
	.  error


state 33
	suite : P C N F INT INT . EOL liste  (3)

	EOL  shift 34
	.  error


state 34
	suite : P C N F INT INT EOL . liste  (3)

	INT  shift 35
	C  shift 4
	MOINS  shift 36
	EOF  shift 37
	ZERO  shift 38
	EOL  shift 39
	.  error

	liste  goto 40
	clause  goto 41
	commentaire  goto 42


state 35
	clause : INT . clause  (21)

	INT  shift 35
	MOINS  shift 36
	ZERO  shift 38
	EOL  shift 39
	.  error

	clause  goto 43


state 36
	clause : MOINS . INT clause  (20)

	INT  shift 44
	.  error


state 37
	liste : EOF .  (4)

	.  reduce 4


state 38
	clause : ZERO . EOL  (19)

	EOL  shift 45
	.  error


state 39
	clause : EOL .  (22)

	.  reduce 22


state 40
	suite : P C N F INT INT EOL liste .  (3)

	.  reduce 3


state 41
	liste : clause . liste  (5)

	INT  shift 35
	C  shift 4
	MOINS  shift 36
	EOF  shift 37
	ZERO  shift 38
	EOL  shift 39
	.  error

	liste  goto 46
	clause  goto 41
	commentaire  goto 42


state 42
	liste : commentaire . liste  (6)

	INT  shift 35
	C  shift 4
	MOINS  shift 36
	EOF  shift 37
	ZERO  shift 38
	EOL  shift 39
	.  error

	liste  goto 47
	clause  goto 41
	commentaire  goto 42


state 43
	clause : INT clause .  (21)

	.  reduce 21


state 44
	clause : MOINS INT . clause  (20)

	INT  shift 35
	MOINS  shift 36
	ZERO  shift 38
	EOL  shift 39
	.  error

	clause  goto 48


state 45
	clause : ZERO EOL .  (19)

	.  reduce 19


state 46
	liste : clause liste .  (5)

	.  reduce 5


state 47
	liste : commentaire liste .  (6)

	.  reduce 6


state 48
	clause : MOINS INT clause .  (20)

	.  reduce 20


13 terminals, 9 nonterminals
24 grammar rules, 49 states
